--- a/style.css
+++ b/style.css
@@ -6,11 +6,9 @@
     line-height: 150%;
 }
 
-
 .logo{
     padding: 10px;
     margin-left: 10px;
-    width: 10%;
 }
 
 main{
@@ -20,17 +18,15 @@ main{
     align-items: center;
     flex-grow: 1;
     gap: 40px;
-    margin: 50px 80px;
+    margin: 50px 50px;
 }
 
 
 .text-area{
     border: none;
     color: #0A3871;
-    /* margin-top: 90px; */
-    text-transform: lowercase;
-    
     resize: none;
+    
 }
 
 ::placeholder{color: #0A3871;}
@@ -39,16 +35,14 @@ main{
 }
 
 .mensaje{
-    /* position: relative; */
-    background: white;
     background-image: url(imagenes/Muñeco.png);
     background-position: center;
     background-repeat: no-repeat;
     border: none;
-    border-radius: 24px;
     color: #0A3871;
-    height: 100%;
-
+    height: 80%;
+    background-color: #FFFFFF; 
+    
 }
 
 .mensaje:focus{
@@ -57,7 +51,7 @@ main{
 
 .botones{
     display: flex;
-    margin-top: 18px;
+    gap: 20px;
 }
 
 .btn-desencriptar{
@@ -67,7 +61,6 @@ main{
     color: #0A3871;
     cursor: pointer;
     height: 67px;
-    margin-left: 30px;
     width: 328px;
 }
 
@@ -82,16 +75,13 @@ main{
 }
 
 .btn-copiar{
-    position: absolute;
     border: 1px solid #0A3871;
     border-radius: 24px;
     color: #0A3871;
     cursor: pointer;
     height: 67px;
-    width: 100%; 
+    width: 336px; 
     display: none;
-    bottom: 10px;
-    z-index: 1; 
 }
 
 .informacion{
@@ -109,10 +99,95 @@ section{
 }
 
 .section-encriptador{
-    /* position: relative; */
     align-content: space-evenly;
 }
 
 .section-mensaje{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
     position: relative;
+    width: 30%;
+    background-color: #FFFFFF; 
+    border-radius: 24px;
+    row-gap: 20px;
+}
+
+.mensaje-error{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: #FFFFFF;
+}
+
+p{
+    font-size: 14px;
+    background-color: #FFFFFF;
+}
+
+strong{
+    font-weight: bold;
+    font-size: 24px;
+    background-color: #FFFFFF;
+}
+
+@media (max-width: 1250px){
+    main{
+        margin: 50px 80px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .section-mensaje{
+        width: 100%;
+        height: 20vh;
+    }
+
+    .section-encriptador{
+        height: 50vh;
+    }
+
+    .mensaje{
+        background-image: none;
+    }
+
+}
+
+@media (max-width: 750px){
+    main{
+        margin: 50px 25px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .botones{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+       
+    }
+
+    .section-encriptador{
+        justify-content: center;
+    }
+
+    .section-mensaje{
+        height: 70vh;
+    }
+
+    .btn-copiar{
+        width: 280px; 
+    }
+
+    .section-encriptador{
+        height: 70vh;
+    }
+
+    .mensaje{
+        background-image: url(imagenes/Muñeco.png);
+    }
+
 }
